# micromayhem-rust

./: Cargo.toml  README.md
crates/game/: Cargo.toml
crates/game/src/: arena.rs  block.rs  input.rs  lib.rs  map.rs  player.rs  test_map.rs  weapon.rs  weaponscatalog.rs
crates/game/src/unittests/: mod.rs  test_arena.rs  test_blocks.rs  test_input.rs  test_map.rs  test_player.rs
crates/game/tests/: test_map.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  spriteloader.rs
crates/network/: Cargo.toml  README.md  test_client.rs
crates/network/src/: client.rs  lib.rs  message.rs  packet.rs  server.rs
crates/network/src/unit_tests/: mod.rs  test_client.rs  test_client_unit.rs  test_message.rs  test_packet.rs
crates/network/tests/: test_client.rs
resources/sprites/: platforms.json
src/: atlas.rs  clientstate.rs  configuration.rs  gamestate.rs  lib.rs  main.rs  serverstate.rs  utils.rs  viewport.rs
