[package]
name = "micromayhem"
version = "0.0.1"
authors = ["Derick Tseng (derickwtseng@gmail.com)"]
description = """
micromayhem is a shooting game inspired by the flash game *Gun Mayhem*.
Gun down your opponents from the platform, and avoid getting shot down yourself.
"""

[workspace]
members = [
    "crates/gui",
    "crates/game",
    "crates/network",
    "crates/launcher"
]
