[package]
name = "micromayhem"
version = "0.0.1"
edition = "2021"
authors = ["Derick Tseng (derickwtseng@gmail.com)"]
description = """
MicroMayhem is a shooting game inspired by the flash game *Gun Mayhem*.
Gun down your opponents from the platform, and avoid getting shot down yourself.
"""
homepage = "https://github.com/MetriC-DT/micromayhem"
repository = "https://github.com/MetriC-DT/micromayhem"

[workspace]
members = [
    "crates/gui",
    "crates/game",
    "crates/network",
]

[dependencies]
ggez = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.20.2"
game = { path = "crates/game" }
gui = { path = "crates/gui" }
network = { path = "crates/network" }

[[bin]]
name = "micromayhem"
path = "src/main.rs"
