[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5.8"
glam = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
num-traits = "0.2"
num-derive = "0.3"
